<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/currentOrderBtn"
        android:layout_width="114dp"
        android:layout_height="106dp"
        android:layout_marginTop="232dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/shopping_cart"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoppingcart"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/store_orders"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="137dp"
        android:layout_height="20dp"
        android:text="@string/shopping_cart"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderBtn" />

    <ImageButton
        android:id="@+id/storeOrdersBtn"
        android:layout_width="114dp"
        android:layout_height="106dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="232dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/store_orders"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/currentOrderBtn"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_store_orders"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pizzaOptionsRecyclerView"
        android:layout_width="326dp"
        android:layout_height="293dp"
        android:layout_marginTop="420dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="269dp"
        android:layout_height="30dp"
        android:text="@string/directions_for_picking_pizzas"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <ImageView
        android:id="@+id/mainMenuTopImage"
        android:layout_width="392dp"
        android:layout_height="224dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/directions_for_picking_pizzas"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_main_menu_image" />

</androidx.constraintlayout.widget.ConstraintLayout>